--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -57,7 +57,7 @@
                         android:id="@+id/ivCondition"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/ic_launcher" />
 
                     <TextView
                         android:id="@+id/tvCondition"
