--- a/app/src/main/res/layout/item_forecast_daily_header.xml
+++ b/app/src/main/res/layout/item_forecast_daily_header.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/bg_daliy_time"
         android:textSize="16sp"
         android:gravity="center_vertical"
         android:textColor="@color/white"
