--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
-        android:text="15天详情"
+        android:text="7 天详情天气预报"
+        android:visibility="gone"
         />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
